[tool.poetry]
name = "bql-label-printer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
brother-ql = "0.9.3"
Flask = "^3.0.0"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.3"
pillow = "9.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
